translations: Add more pt-rBR strings
Change-Id: If54a28a5b0d97e1dac1ecb5e18cd38cb9f0082e2
Signed-off-by: Richard Raya <rdxzv.dev@gmail.com>

--- a/ParanoidThemePickerTranslation/res/values-pt-rBR/strings.xml
+++ b/ParanoidThemePickerTranslation/res/values-pt-rBR/strings.xml
@@ -17,4 +17,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="icon_pack_title">Ícones do sistema</string>
     <string name="font_title">Fonte do sistema</string>
+
+    <string name="icon_shape_title">Forma dos ícones</string>
 </resources>
